# voice-agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
docs/: exotel-agentstream-setup.md  latency-and-voice-notes.md
scripts/: audition_voices.py  make_test_call.py  start_render_combined.sh  sync_env_from_mandi.py
src/voice_agent/: __init__.py  agent.py  audio_bridge.py  config.py  exotel_events.py  exotel_gateway.py  livekit_bridge.py  metrics.py  outbound.py  prompts.py  tools.py
tests/: test_audio_bridge.py  test_exotel_events.py  test_outbound.py  test_prompts.py
