[project]
name = "voice-agent"
version = "0.1.0"
description = "Low-latency Hindi/Hinglish MandiPlus calling agent using Exotel AgentStream, LiveKit, and Gemini Live."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<0.29.0",
  "livekit-agents[google]~=1.5",
  "pydantic-settings>=2.7.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[project.scripts]
voice-agent-api = "voice_agent.exotel_gateway:main"
voice-agent-worker = "voice_agent.agent:main"
voice-agent-call = "voice_agent.outbound:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
